# AP-BMM

./: .gitignore  README.md  RELEASE_STRUCTURE.md  pyproject.toml  setup.cfg
evalscope/: config.py
evalscope/api/benchmark/: benchmark.py
evalscope/api/benchmark/adapters/: default_data_adapter.py
evalscope/benchmarks/ifeval/: ifeval_adapter.py
evalscope/metrics/: metric.py
evalscope/report/: generator.py  report.py
mergekit/: sparsify.py
mergekit/merge_methods/: __init__.py
scripts/: apbmm_quickstart.py
src/: config_manager.py
src/evoMI/: async_merge_evaluator.py  checkpoint_analyzer.py  checkpoint_runtime.py  emm_optimizer.py  evaluate_checkpoint_solutions.py  evaluation_script.py  evaluation_utils.py  grid_search_optimizer.py  mi_block_fusion.py  mi_opt_optimizer.py  mi_opt_saasbo2.py  mi_opt_unified.py  mm_mo_optimizer.py  model_reproduction.py  moead_cmaes_prior_optimizer.py  momm_optimizer.py  optimization_reporting.py  optimizer.py  qehvi_optimizer.py  qnehvi_optimizer.py  result_processor.py  runtime_artifacts.py  saasbo_qnehvi_optimize_block.py  saasbo_qnehvi_optimizer.py  task_diff_analyzer.py  vllm_server_manager.py
src/ta_methos/: model_fusion.py  model_fusion_layer.py  model_level_fusion_test.py
